src/objects/LoanStatus__c.object
<CustomObject>
    <fields>
        <fullName>LoanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>LoanStatus</relationshipLabel>
        <relationshipName>LoanStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORMS_AE__c</fullName>
        <formula>LoanId__r.ORMS_AE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORMS AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousStatus__c</fullName>
        <label>Previous Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Dups__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove Dups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team (Source via Loan Team)</description>
        <formula>LoanId__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Team (Source via Loan Team)</inlineHelpText>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status - Used By Executive Reporting</description>
        <inlineHelpText>Status - Used By Executive Reporting</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Waiting for Full Package</fullName>
                </value>
                <value>
                    <fullName>Full Application Received - Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Processing</fullName>
                </value>
                <value>
                    <fullName>Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Underwriting Clear to Close</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Awaiting Closing</fullName>
                </value>
                <value>
                    <fullName>Closed - Awaiting Funding</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                    <label>Application Requested</label>
                </value>
                <value>
                    <fullName>Application Package Received</fullName>
                    <label>Full Package Received</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>LoanStatus</label><nameField>
        <label>Current Status</label>
        <type>Text</type>
    </nameField><pluralLabel>LoanStatus</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
</CustomObject>